# Pyrate

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dev-check.bat  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/pyrate/: __init__.py  __main__.py  cli.py  config.py  scanner.py
src/pyrate.egg-info/: PKG-INFO  SOURCES.txt
src/pyrate/core/: __init__.py  config.py  engine.py  plugin_manager.py  registry.py  scanner.py
src/pyrate/models/: __init__.py  plugin.py  scan_result.py
src/pyrate/utils/: __init__.py  http_client.py  logging.py  module.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_scanner.py
tests/unit/core/: test_config.py
tests/unit/models/: test_scan_result.py
